installer/cluster/production/aliyun-ack/config/kubesphere/kubesphere-ingress-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ouxxa-cluster-gateway
  namespace: kubesphere-system
spec:
  selector:
    istio: ingressgateway-kubesphere
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "cluster.prod.it.ouxxa.com"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "cluster.prod.it.ouxxa.com"
    tls:
      mode: SIMPLE
      credentialName: ouxxa-cluster-1-production-ks-console-tls

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ks-console-vs
  namespace: kubesphere-system
spec:
  hosts:
  - "cluster.prod.it.ouxxa.com"
  gateways:
  - ouxxa-cluster-gateway
  http:
  - route:
    - destination:
        host: ks-console
        port:
          number: 80
